// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Menu renders closed menu 1`] = `
<DocumentFragment>
  .c1 {
  --bg: #000000;
  --txt: #ffffff;
  --hover: #000000;
  margin: 0;
  border-width: 0;
  border-style: solid;
  border-color: var(--bg);
  border-radius: 0;
  background-color: transparent;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 2.625rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  outline: none;
}

.c1:hover {
  border-color: var(--hover);
  background-color: transparent;
}

.c1:hover span {
  color: var(--hover);
}

.c1:hover svg {
  fill: var(--hover);
}

.c1:disabled {
  cursor: inherit;
  opacity: 0.5;
}

.c1:disabled:hover {
  background-color: transparent;
  pointer-events: none;
}

.c1 > *:not(:last-child) {
  margin-left: 0;
  margin-right: 0.875rem;
}

.c1 .spinner {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  border-top-color: var(--button);
}

.c1 span {
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1rem;
  color: var(--bg);
  pointer-events: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c1 svg {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  width: 1.25rem;
  height: 1.25rem;
  fill: var(--bg);
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0 {
  height: 3.125rem;
}

.c0 button {
  margin-top: 0.4375rem;
}

<div
    class="c0"
  >
    <button
      aria-hidden="false"
      aria-label=""
      class="c1 button"
      color="dark"
      data-event=""
      data-testid="action-menu-button"
      value=""
    >
      <svg
        class="icon"
        viewBox="0 0 32 32"
      >
        <path
          d="M16 10.667c1.473 0 2.667-1.194 2.667-2.667s-1.194-2.667-2.667-2.667c-1.473 0-2.666 1.194-2.667 2.666v0c0.004 1.471 1.196 2.662 2.666 2.667h0zM16 13.333c-1.473 0-2.667 1.194-2.667 2.667s1.194 2.667 2.667 2.667c1.473 0 2.667-1.194 2.667-2.667v0c-0.005-1.471-1.196-2.662-2.666-2.667h-0zM16 21.333c-1.473 0-2.667 1.194-2.667 2.667s1.194 2.667 2.667 2.667c1.473 0 2.667-1.194 2.667-2.667v0c-0.005-1.471-1.196-2.662-2.666-2.667h-0z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Actions Menu renders open menu 1`] = `
<DocumentFragment>
  .c1 {
  --bg: #000000;
  --txt: #ffffff;
  --hover: #000000;
  margin: 0;
  border-width: 0;
  border-style: solid;
  border-color: var(--bg);
  border-radius: 0;
  background-color: transparent;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 2.625rem;
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  cursor: pointer;
  outline: none;
}

.c1:hover {
  border-color: var(--hover);
  background-color: transparent;
}

.c1:hover span {
  color: var(--hover);
}

.c1:hover svg {
  fill: var(--hover);
}

.c1:disabled {
  cursor: inherit;
  opacity: 0.5;
}

.c1:disabled:hover {
  background-color: transparent;
  pointer-events: none;
}

.c1 > *:not(:last-child) {
  margin-left: 0;
  margin-right: 0.875rem;
}

.c1 .spinner {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  border-top-color: var(--button);
}

.c1 span {
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1rem;
  color: var(--bg);
  pointer-events: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c1 svg {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  width: 1.25rem;
  height: 1.25rem;
  fill: var(--bg);
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0 {
  height: 3.125rem;
}

.c0 button {
  margin-top: 0.4375rem;
}

.c2 {
  position: absolute;
  border: 0.0625rem solid #D9D4ED;
  border-radius: 0.5rem;
  background-color: #ffffff;
  margin-top: 0.3125rem;
  min-width: 12.5rem;
  max-width: 15.625rem;
  padding: 0;
  -moz-box-shadow: rgba(0,0,0,0.15);
  -webkit-box-shadow: rgba(0,0,0,0.15);
  box-shadow: rgba(0,0,0,0.15);
  overflow: hidden;
  z-index: 1;
}

.c2 li {
  list-style: none;
  min-height: 2.8125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.c2 li:hover {
  background-color: #C7BFE4;
  cursor: pointer;
}

.c2 li.danger {
  border-top: 0.0625rem solid #D9D4ED;
}

.c2 li.danger a {
  color: #EB5757;
}

.c2 li.disabled a {
  color: #ABACBA;
  pointer-events: none;
}

.c2 li.disabled:hover {
  background-color: transparent;
}

.c2 li a {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1.25rem;
  color: #000000;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c2 li a span {
  display: table-cell;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
    class="c0"
  >
    <button
      aria-hidden="false"
      aria-label=""
      class="c1 button"
      color="dark"
      data-event=""
      data-testid="action-menu-button"
      value=""
    >
      <svg
        class="icon"
        viewBox="0 0 32 32"
      >
        <path
          d="M16 10.667c1.473 0 2.667-1.194 2.667-2.667s-1.194-2.667-2.667-2.667c-1.473 0-2.666 1.194-2.667 2.666v0c0.004 1.471 1.196 2.662 2.666 2.667h0zM16 13.333c-1.473 0-2.667 1.194-2.667 2.667s1.194 2.667 2.667 2.667c1.473 0 2.667-1.194 2.667-2.667v0c-0.005-1.471-1.196-2.662-2.666-2.667h-0zM16 21.333c-1.473 0-2.667 1.194-2.667 2.667s1.194 2.667 2.667 2.667c1.473 0 2.667-1.194 2.667-2.667v0c-0.005-1.471-1.196-2.662-2.666-2.667h-0z"
        />
      </svg>
    </button>
    <ul
      class="c2"
      data-testid="ul-action-menu"
    >
      <li
        class="default"
        data-testid="li-action-menu"
      >
        <a
          href=""
        >
          <span>
            Go to Details
          </span>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
